网关添加xss过滤器、允许Get请求的content-type为空、添加全局异常处理

--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-hoxton</artifactId>
-        <groupId>top.vchar.demo.spring</groupId>
+        <groupId>top.vchar</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,10 @@
     <artifactId>eureka-server</artifactId>
     <packaging>jar</packaging>
     <description>eureka注册中心</description>
-
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
